chore: change og meta tag values

--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
   <link rel="manifest" href="/site.webmanifest" />
   <meta property="og:type" content="website">
-  <meta property="og:title" content="Bk ui - Interactive React Components">
+  <meta property="og:title" content="BK UI - Interactive React Components">
   <meta property="og:description" content="A collection of interactive and composable React component demos">
 
-  <meta property="og:image" content="https://bk-ui.vercel.app/BKUI.svg">
+  <meta property="og:image" content="https://bk-ui.vercel.app/BKUI.png">
 
   <meta property="og:url" content="https://bk-ui.vercel.app/">
 
-  <meta property="og:site_name" content="Bk ui">
+  <meta property="og:site_name" content="BK UI">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Vite + React + TS</title>
 </head>
